--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "lucide-react": "^0.475.0",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
-    "next": "15.3.3",
+    "next": "^16.1.1",
     "nodemailer": "^7.0.10",
     "patch-package": "^8.0.0",
     "qrcode": "^1.5.4",
